fix spacing when no items are found

--- a/angularapp/src/app/search/search.component.css
+++ b/angularapp/src/app/search/search.component.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   padding-top: 5rem;
   padding-bottom: 5rem;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   gap: 5rem;
 }
